viewport fix on mobiles

--- a/css/expdb.css
+++ b/css/expdb.css
@@ -379,7 +379,8 @@ select{
   -webkit-overflow-scrolling: touch;
   width:265px !important;
   z-index: 1020;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .searchbar::-webkit-scrollbar {
@@ -686,7 +687,6 @@ select{
 
 .guidesection{
   background: #ffffff;
-  min-height: 100vh;
 }
 
 .guidecontainer{
@@ -1760,11 +1760,10 @@ hr.hardSmall {
 }
 
 html, body {
-   /* height: 100%; */
+   height: 100%;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    width: auto !important;  /* Firefox will set width as auto */
-   min-width: 480px; /* suppose you want minimun width of 1000px */
    background-color: #ececec;
 }
 
